<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HomePlayerActivity">


    <TextView
        android:id="@+id/textViewHomePlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/screen_name_home" />

    <Button
        android:id="@+id/button_select_cryptogram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="selectCryptogram"
        android:text="@string/screen_name_select_cryptogram" />

    <Button
        android:id="@+id/button_view_statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="viewStatistics"
        android:text="@string/screen_name_view_statistics" />

    <Button
        android:id="@+id/button_log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/action_log_out"
        android:onClick="logOut"/>


</LinearLayout>