...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_status" />
    </LinearLayout>

    <ListView
        android:id="@+id/cryptogramListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical" />
    <!--Buttons in the same line.
    https://stackoverflow.com/questions/10185874/how-to-put-two-buttons-on-same-line-in-android-->
...
